fixed menu color issue in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -953,6 +953,10 @@ article p {
         background-color: #1C1C1C;
     }
 
+    .menu-button {
+        color: #FFFFFB;
+    }
+
     .menu-icon {
         filter: invert(100%);
     }
